[gd_scene load_steps=27 format=3 uid="uid://be3xkbl84anxw"]

[ext_resource type="Script" path="res://player.gd" id="1_m8axc"]
[ext_resource type="Texture2D" uid="uid://q8xnyf8lai5v" path="res://textures/duck/right.png" id="2_17gb2"]
[ext_resource type="Texture2D" uid="uid://0co383qji8wk" path="res://textures/duck/thingy.png" id="2_sqy1f"]
[ext_resource type="Texture2D" uid="uid://6e6cwa5l7uqi" path="res://textures/duck/flyleft.png" id="3_a2124"]
[ext_resource type="Texture2D" uid="uid://rd54yxrt5ucc" path="res://textures/duck/cannon.png" id="3_dgd70"]
[ext_resource type="Texture2D" uid="uid://77r875bgs0wg" path="res://textures/duck/walkright.png" id="3_li58c"]
[ext_resource type="Texture2D" uid="uid://dv4w6u38yj8me" path="res://textures/duck/walkleft.png" id="4_pc8ne"]
[ext_resource type="Texture2D" uid="uid://c62oradgij1te" path="res://textures/duck/flyright.png" id="5_ak63i"]
[ext_resource type="Texture2D" uid="uid://ohrgunn1m46u" path="res://textures/duck/left.png" id="7_l0edp"]
[ext_resource type="AudioStream" uid="uid://0ubkfyjmbmn6" path="res://audio/pl_step1.wav" id="10_5ofp1"]
[ext_resource type="AudioStream" uid="uid://ckikokffl2ygm" path="res://audio/2.ogg" id="11_3u47g"]
[ext_resource type="Texture2D" uid="uid://44pjl5hs1rd2" path="res://textures/crosshair.png" id="11_6a0ne"]
[ext_resource type="AudioStream" uid="uid://bk1jfg5dx10qd" path="res://audio/glauncher.wav" id="11_8og24"]
[ext_resource type="AudioStream" uid="uid://by58n75u3e2e7" path="res://audio/single-quack-from-a-duck-14494.mp3" id="12_0unir"]
[ext_resource type="Texture2D" uid="uid://bvok05hwus3p4" path="res://textures/health/health5.png" id="13_1472h"]
[ext_resource type="AudioStream" uid="uid://dw2qv7g3hyhl2" path="res://audio/smallmedkit1.wav" id="16_t0pkm"]
[ext_resource type="Texture2D" uid="uid://iwoje7ukcyh5" path="res://textures/controlpad.png" id="17_2wnhh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5r0w"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qpfyo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_a2124")
}, {
"duration": 1.0,
"texture": ExtResource("4_pc8ne")
}],
"loop": true,
"name": &"Flyingleft",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ak63i")
}, {
"duration": 1.0,
"texture": ExtResource("3_li58c")
}],
"loop": true,
"name": &"Flyingright",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_pc8ne")
}, {
"duration": 1.0,
"texture": ExtResource("7_l0edp")
}],
"loop": true,
"name": &"Walkingleft",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_li58c")
}, {
"duration": 1.0,
"texture": ExtResource("2_17gb2")
}],
"loop": true,
"name": &"Walkingright",
"speed": 15.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fp6ku"]
size = Vector2(22, 22)

[sub_resource type="Animation" id="Animation_m5ida"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/Health:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-240, -250)]
}

[sub_resource type="Animation" id="Animation_q4f7y"]
resource_name = "damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/Health:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-240, -250), Vector2(-240, -270), Vector2(-240, -230), Vector2(-240, -260), Vector2(-240, -240), Vector2(-240, -250)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8c0ib"]
_data = {
"RESET": SubResource("Animation_m5ida"),
"damage": SubResource("Animation_q4f7y")
}

[sub_resource type="Animation" id="Animation_g46or"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 160)]
}

[sub_resource type="Animation" id="Animation_qmilm"]
resource_name = "cameraShake"
length = 4.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.9, 0.933333, 0.966667, 1, 1.03333, 1.06667, 1.1, 1.13333, 1.16667, 1.2, 1.23333, 1.26667, 1.3, 1.33333, 1.36667, 1.4, 1.43333, 1.46667, 1.5, 1.53333, 1.56667, 1.6, 1.63333, 1.66667, 1.7, 1.73333, 1.76667, 1.8, 1.83333, 1.86667, 1.9, 1.93333, 1.96667, 2, 2.03333, 2.06667, 2.1, 2.13333, 2.16667, 2.2, 2.23333, 2.26667, 2.3, 2.33333, 2.36667, 2.4, 2.43333, 2.46667, 2.5, 2.53333, 2.56667, 2.6, 2.63333, 2.66667, 2.7, 2.73333, 2.76667, 2.8, 2.83333, 2.86667, 2.9, 2.93333, 2.96667, 3, 3.03333, 3.06667, 3.1, 3.13333, 3.16667, 3.2, 3.23333, 3.26667, 3.3, 3.33333, 3.36667, 3.4, 3.43333, 3.46667, 3.5, 3.53333, 3.56667, 3.6, 3.63333, 3.66667, 3.7, 3.73333, 3.76667, 3.8, 3.83333, 3.86667, 3.9, 3.93333, 3.96667, 4, 4.03333, 4.06667, 4.1, 4.13333, 4.16667, 4.2, 4.23333, 4.26667, 4.3, 4.33333, 4.36667, 4.4, 4.43333, 4.46667, 4.5, 4.53333, 4.56667, 4.6, 4.63333, 4.66667, 4.7, 4.73333, 4.76667, 4.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160), Vector2(6, 168), Vector2(-7, 154), Vector2(7, 165), Vector2(0, 153), Vector2(2.5, 166), Vector2(5, 169), Vector2(0, 160), Vector2(4, 170), Vector2(0, 160)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6q8o3"]
_data = {
"RESET": SubResource("Animation_g46or"),
"cameraShake": SubResource("Animation_qmilm")
}

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_layer = 3
collision_mask = 5
script = ExtResource("1_m8axc")

[node name="HUD" type="Node2D" parent="."]

[node name="Health" type="Sprite2D" parent="HUD"]
position = Vector2(-240, -250)
scale = Vector2(1.95, 2.4)
texture = ExtResource("13_1472h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(1.05, 1.05)
shape = SubResource("RectangleShape2D_v5r0w")

[node name="cannonbase" type="Sprite2D" parent="."]
position = Vector2(-0.5, -13)
scale = Vector2(1.05, 1.5)
texture = ExtResource("2_sqy1f")

[node name="animator" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qpfyo")
animation = &"Walkingright"
autoplay = "default"

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_17gb2")

[node name="pivot" type="Node2D" parent="."]
position = Vector2(5.36442e-07, -13)

[node name="cannon" type="Sprite2D" parent="pivot"]
position = Vector2(-0.47619, 0)
scale = Vector2(1.095, 1.095)
texture = ExtResource("3_dgd70")

[node name="firezone" type="Node2D" parent="pivot/cannon"]
position = Vector2(0.434876, -10.3501)

[node name="Crosshair2" type="Sprite2D" parent="pivot"]
position = Vector2(0, -100)
scale = Vector2(4, 4)
texture = ExtResource("11_6a0ne")

[node name="damagezone" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 23

[node name="CollisionShape2D" type="CollisionShape2D" parent="damagezone"]
position = Vector2(0, 1)
scale = Vector2(1.01, 1.01)
shape = SubResource("RectangleShape2D_fp6ku")

[node name="splitsecond" type="Timer" parent="."]
wait_time = 0.05

[node name="invincibilitytime" type="Timer" parent="."]
wait_time = 0.4

[node name="cannoncooldown" type="Timer" parent="."]
wait_time = 0.2

[node name="walkingsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_5ofp1")
volume_db = -6.933
pitch_scale = 1.31

[node name="cannonsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_8og24")
volume_db = -8.915
pitch_scale = 1.5

[node name="hitsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_3u47g")

[node name="hitsound2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_0unir")
volume_db = 24.0
pitch_scale = 1.19

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8c0ib")
}

[node name="Camerashaker" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6q8o3")
}

[node name="medkitsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_t0pkm")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 160)

[node name="Controlpad" type="Sprite2D" parent="."]
position = Vector2(0, 519.75)
scale = Vector2(1, 1.50208)
texture = ExtResource("17_2wnhh")

[connection signal="body_entered" from="damagezone" to="." method="_on_damagezone_body_entered"]
[connection signal="timeout" from="splitsecond" to="." method="_on_splitsecond_timeout"]
[connection signal="timeout" from="invincibilitytime" to="." method="_on_invincibilitytime_timeout"]
[connection signal="timeout" from="cannoncooldown" to="." method="_on_cannoncooldown_timeout"]
